# Labrary_ERP

./: .gitignore  README.md  anot  compose.yml
API/: Cargo.toml
API/src/: endpoints.rs  entities.rs  errors.rs  main.rs  sql_service.rs
API/src/endpoints/: gets.rs  handlers.rs  mod.rs
API/src/sql_service/: actions.rs  fetches.rs  mod.rs  tables.rs
APP/: index.html  package-lock.json  package.json
APP/src/: Book_modal.css  Books.css  Books_Module.jsx  index.css  main.jsx  test.css  test.jsx
APP/src/Modules/Books/: Book_Modal.jsx  Book_modal.css  Books.css  Books_Module.jsx
APP/src/Modules/Hub/: Hub-Module.css  Hub-Module.jsx
APP/src/Modules/Purchase/: Purchase_modal.jsx  Purchase_module.css  Purchase_module.jsx  purchase_modal.css
APP/src/Modules/Stock/: Stock_module.jsx
APP/src/Modules/employee/: Employee_module.css  Employee_module.jsx
APP/src/components/: GridComponent.css  GridComponent.jsx  SmallComponents.css  SmallComponents.jsx  module_pane.css
DB/scripts/: insert.sql  run
FileServer/: build.zig  build.zig.zon
FileServer/Files/: osaka1.png:Zone.Identifier  osaka3.gif:Zone.Identifier
FileServer/src/: main.zig
