[package]
name = "API"
version = "0.1.0"
edition = "2024"

[dependencies]
sql_query_builder = { version = "2.x.x", features = ["sqlite"] }
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = [ "postgres","runtime-async-std", "tls-native-tls","macros" ] }
